<resources>
    <string-array name="workout_levels">
        <item>Please Select Your Workout level</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="app_name">BurnFit</string>
    <string name="exercise">Exercise</string>
    <string name="food">Food</string>
    <string name="explore">Explore</string>
    <string name="fun">Events</string>
    <string name="txt">txt</string>
    <string name="calorieCount">Calorie Count</string>
    <string name="calorieIntake">Enter your calorie intake for today</string>
    <string name="workoutChoice">Workout Choice</string>
    <string name="workoutSelect">What Kind Of Workout Would You Like To Do?</string>
    <string name="gymMembership">Do you have a gym membership already?</string>
    <string name="membership">If so, enter in the name of your gym, otherwise "no"</string>
    <string name="activityChoice">Is there a particular activity you want to do today?</string>
    <string name="activity">If so, enter in the name</string>
    <string name="video_list_title">Title</string>
    <string name="DEVELOPER_KEY">AIzaSyAa_BhMdsxI7jmSOmptLnYojxD0DN6VNgY</string>
    <string name="foodConsDets">Enter in your food consumption details for today</string>
    <string name="foodAllergy">List any known food allergies you have; say none if you have none</string>
    <string name="dietPlanDetails">Enter details of your diet plan, if you have one; say "none" if you do not</string>
    <string name="nextPageFood">Done Entering Info</string>
    <string name="title_activity_food_manager">FoodManager</string>
    <string name="hardCodeInputCalories">600</string>
    <string name="hardCodeInputCons">Breakfast: Cereal Bar.\nLunch: Rice, yogurt, pulverized tomato extract.</string>
    <string name="none">none</string>
    <string name="hardCodeInputDiet">Trying to eat less fat and more food that helps build strength</string>
    <string name="foodSuggestion">Since you calorie intake so far today is between 500 and 750, we recommend that you eat
    some type of vegetable dish. Maybe eat some eggplant since it will help you develop strength and has a lot of nutrients
    that you need.</string>
    <string name="recipeIdea">Recipe Idea: Eggplant Fries</string>
    <string name="ingredients">Ingredients: 1 cup flour, 1/2 tsp carom seeds, 1/2 tsp salt, 1/2 tsp
    cayenne pepper powder, and a pinch of asafoetida, 5mm raw eggplant slices\n</string>
    <string name="process">Process: Mix the dry ingredients (everything besides the eggplant pieces)
    well. Add cold water and make sure no lumps are formed. The batter should have the the same consistency as
    pancake batter. Dip the eggplant pieces into the batter and deep fry in hot oil. Reduce the heat after the
    eggplant pieces are dropped in oil and fry until they are a beige-ish color. Then remove them and place them
    on a paper towel to drain excess oil. You can eat them plain, or with ketchup or pulverized cilantro.</string>
    <string name="title_activity_events">Events</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_danceathon">Danceathon</string>

    <string name="title_activity_wellness">Wellness</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_health">Health</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign in</string>
</resources>