<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/calorieCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorieIntake"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="600"
        android:inputType="number"/>

    <TextView
        android:text="@string/foodConsDets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodConsDets"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="Cereal Bar
        Rice, yogurt, pulverized tomato extract"/>


    <TextView
        android:text="@string/foodAllergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodAllergy"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="none"/>

    <TextView
        android:text="@string/dietPlanDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dietPlanDetails"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="Trying to eat less fat and more food that helps build strength"/>


</LinearLayout>